Added PrEP users non-PrEP screening and Disclosure Report